--- a/css/qq1226.css
+++ b/css/qq1226.css
@@ -31,13 +31,6 @@ a{text-decoration: none;}
     cursor:pointer;
     display: inline-block;
 }
-/* .active{
-    height:40px;
-    line-height:40px;
-    padding-left:30px;
-    cursor:pointer;
-    background: url("ico2.gif") no-repeat 8px  center;
-} */
 
 /* h4前面的小图片 */
 .h4bj{
@@ -56,7 +49,6 @@ a{text-decoration: none;}
 .ul2cls li{
     padding-bottom:4px;
     border-top:1px dotted #ccc;
-    /*background: url("logo.png") no-repeat 12px center;*/
     border-radius:2px;
     background: #fff;
 }
@@ -76,7 +68,7 @@ a{text-decoration: none;}
     border:2px solid #ccc;
     border-radius:2px;
     box-shadow:0 0 5px #ccc;
-    background: url(./img/imgdiv.png) no-repeat  center;
+    background: url(../img/imgdiv.png) no-repeat  center;
     display: none;
     position: absolute;
 }
